fix: testimonial credit spacing
fix: PWA>Guest screen

--- a/frontend/assets/sass/modules/_guest.scss
+++ b/frontend/assets/sass/modules/_guest.scss
@@ -224,13 +224,16 @@
   }
 
   &__credit {
+    margin-top: 1rem;
     font-size: 0.875rem;
 
     strong {
+      display: block;
       color: transparent;
       background: var(--background-gradient);
       background-clip: text;
       -webkit-background-clip: text;
+      margin-bottom: 0.25rem;
     }
 
     em {
